# flower

./: pyproject.toml
examples/android/: pyproject.toml  server.py
examples/quickstart_tensorflow/: pyproject.toml  server.py
src/py/flwr/common/: parameter.py
src/py/flwr/server/: app.py  client_manager.py  server.py
src/py/flwr/server/grpc_server/: flower_service_servicer.py
src/py/flwr/server/strategy/: fedavg.py
