[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "quickstart_tensorflow"
version = "0.1.0"
description = "Keras Federated Learning Quickstart with Flower"
authors = ["The Flower Authors <hello@flower.dev>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
# flwr = "^1.0.0"
flwr = { path = "../../", develop = true }
tensorflow-cpu = { version = "^2.9.1", markers = "sys_platform != 'darwin'" }
tensorflow-macos = { version = "^2.9.1", markers = "sys_platform == 'darwin'" }
numpy = "^1.22.0"
